--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 width: 100%;
             }
         </style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        
     </head>
     <body>
          <div id="map"></div>
@@ -53,9 +55,8 @@
     success: function(data) {
         L.geoJSON(data.features, {
             pointToLayer: function(feature, latlng){
-                console.log(feature.properties.registered)
                 color = "#777"
-                opacity = 0
+                opacity = 0.7
                 if(feature.properties.registered) {
                     color = "#0FBE7C"
                     opacity = 1
@@ -65,7 +66,6 @@
                     color: color,
                     weight: 5,
                     opacity: opacity,
-                    fillOpacity: 0.8
                 };
 
                 return L.circle(latlng, geojsonMarkerOptions)
